--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,10 @@ exclude = '''
 profile = "black"
 py_version = 312
 skip_gitignore = true
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-ra -q"
+testpaths = ["tests"]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
