update docker-compose.yml and README.md

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,11 @@
 TOKEN=
-BOT_NAME=
+BOT_PAYMENT_PROVIDER_TOKEN=
+
+SECRET_KEY=
+DJANGO_SUPERUSER_EMAIL=
+DJANGO_SUPERUSER_PASSWORD=
+
+CHANNEL_SUBSCRIPTION_LINK=
+CHANNEL_SUBSCRIPTION_CHECK=
+GROUP_SUBSCRIPTION_LINK=
+GROUP_SUBSCRIPTION_CHECK=
